Add mouse and base sine wave

--- a/vs/i3d.vcxproj
+++ b/vs/i3d.vcxproj
@@ -154,22 +154,27 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\3d_wave.cpp" />
     <ClCompile Include="..\src\boat.cpp" />
     <ClCompile Include="..\src\defence.cpp" />
     <ClCompile Include="..\src\functions.cpp" />
     <ClCompile Include="..\src\island.cpp" />
     <ClCompile Include="..\src\keyboard.cpp" />
     <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="..\src\mouse.cpp" />
     <ClCompile Include="..\src\projectile.cpp" />
     <ClCompile Include="..\src\wave.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\3d_wave.h" />
     <ClInclude Include="..\src\boat.h" />
     <ClInclude Include="..\src\colour.h" />
     <ClInclude Include="..\src\defence.h" />
     <ClInclude Include="..\src\functions.h" />
     <ClInclude Include="..\src\island.h" />
     <ClInclude Include="..\src\keyboard.h" />
+    <ClInclude Include="..\src\mouse.h" />
+    <ClInclude Include="..\src\opengl.h" />
     <ClInclude Include="..\src\projectile.h" />
     <ClInclude Include="..\src\vec2f.h" />
     <ClInclude Include="..\src\vec2fPolar.h" />
