--- a/vs/i3d.vcxproj.filters
+++ b/vs/i3d.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="..\src\wave.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\3d_wave.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\mouse.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\boat.h">
@@ -63,6 +69,15 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\wave.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\opengl.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\3d_wave.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\mouse.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
