--- a/vs/i3d.vcxproj.filters
+++ b/vs/i3d.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="..\src\mouse.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\seafloor.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\texture.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\boat.h">
@@ -78,6 +84,18 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\mouse.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\seafloor.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Header.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\texture.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\stb_image.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
