--- a/vs/i3d.vcxproj
+++ b/vs/i3d.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="..\src\3d_island.cpp" />
     <ClCompile Include="..\src\3d_wave.cpp" />
     <ClCompile Include="..\src\boat.cpp" />
+    <ClCompile Include="..\src\cylinder.cpp" />
     <ClCompile Include="..\src\defence.cpp" />
     <ClCompile Include="..\src\functions.cpp" />
     <ClCompile Include="..\src\island.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="..\src\3d_wave.h" />
     <ClInclude Include="..\src\boat.h" />
     <ClInclude Include="..\src\colour.h" />
+    <ClInclude Include="..\src\cylinder.h" />
     <ClInclude Include="..\src\defence.h" />
     <ClInclude Include="..\src\functions.h" />
     <ClInclude Include="..\src\island.h" />
