--- a/vs/i3d.vcxproj.filters
+++ b/vs/i3d.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="..\src\cylinder.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\skybox.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\boat.h">
@@ -117,6 +120,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\cylinder.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\skybox.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
