Added cannon, xyz coordinate for end of cannon can also be calculated

--- a/vs/i3d.vcxproj.filters
+++ b/vs/i3d.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="..\src\cylinder.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\half_cylinder.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\rectangle.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\boat.h">
@@ -117,6 +123,12 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\cylinder.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\half_cylinder.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\rectangle.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
