--- a/vs/i3d.vcxproj
+++ b/vs/i3d.vcxproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="..\src\3d_boat.cpp" />
     <ClCompile Include="..\src\3d_island.cpp" />
+    <ClCompile Include="..\src\3d_projectile.cpp" />
     <ClCompile Include="..\src\3d_wave.cpp" />
     <ClCompile Include="..\src\boat.cpp" />
     <ClCompile Include="..\src\cylinder.cpp" />
@@ -171,12 +172,14 @@
     <ClCompile Include="..\src\rectangle.cpp" />
     <ClCompile Include="..\src\seafloor.cpp" />
     <ClCompile Include="..\src\skybox.cpp" />
+    <ClCompile Include="..\src\sphere.cpp" />
     <ClCompile Include="..\src\texture.cpp" />
     <ClCompile Include="..\src\wave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\3d_boat.h" />
     <ClInclude Include="..\src\3d_island.h" />
+    <ClInclude Include="..\src\3d_projectile.h" />
     <ClInclude Include="..\src\3d_wave.h" />
     <ClInclude Include="..\src\boat.h" />
     <ClInclude Include="..\src\colour.h" />
@@ -193,11 +196,13 @@
     <ClInclude Include="..\src\rectangle.h" />
     <ClInclude Include="..\src\seafloor.h" />
     <ClInclude Include="..\src\skybox.h" />
+    <ClInclude Include="..\src\sphere.h" />
     <ClInclude Include="..\src\stb_image.h" />
     <ClInclude Include="..\src\texture.h" />
     <ClInclude Include="..\src\vec2f.h" />
     <ClInclude Include="..\src\vec2fPolar.h" />
     <ClInclude Include="..\src\vec3f.h" />
+    <ClInclude Include="..\src\vec3fSpherical.h" />
     <ClInclude Include="..\src\wave.h" />
   </ItemGroup>
   <ItemGroup>
