--- a/vs/i3d.vcxproj.filters
+++ b/vs/i3d.vcxproj.filters
@@ -51,6 +51,7 @@
     <ClInclude Include="..\src\sphere.h" />
     <ClInclude Include="..\src\3d_projectile.h" />
     <ClInclude Include="..\src\vec3fSpherical.h" />
+    <ClInclude Include="..\src\tex2f.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\src\sand.jpg" />
