Particle effects done

--- a/vs/i3d.vcxproj
+++ b/vs/i3d.vcxproj
@@ -162,12 +162,14 @@
     <ClCompile Include="..\src\boat.cpp" />
     <ClCompile Include="..\src\cylinder.cpp" />
     <ClCompile Include="..\src\defence.cpp" />
+    <ClCompile Include="..\src\effect.cpp" />
     <ClCompile Include="..\src\functions.cpp" />
     <ClCompile Include="..\src\half_cylinder.cpp" />
     <ClCompile Include="..\src\island.cpp" />
     <ClCompile Include="..\src\keyboard.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\mouse.cpp" />
+    <ClCompile Include="..\src\particle.cpp" />
     <ClCompile Include="..\src\projectile.cpp" />
     <ClCompile Include="..\src\random.cpp" />
     <ClCompile Include="..\src\rectangle.cpp" />
@@ -188,12 +190,14 @@
     <ClInclude Include="..\src\colour.h" />
     <ClInclude Include="..\src\cylinder.h" />
     <ClInclude Include="..\src\defence.h" />
+    <ClInclude Include="..\src\effect.h" />
     <ClInclude Include="..\src\functions.h" />
     <ClInclude Include="..\src\half_cylinder.h" />
     <ClInclude Include="..\src\island.h" />
     <ClInclude Include="..\src\keyboard.h" />
     <ClInclude Include="..\src\mouse.h" />
     <ClInclude Include="..\src\opengl.h" />
+    <ClInclude Include="..\src\particle.h" />
     <ClInclude Include="..\src\projectile.h" />
     <ClInclude Include="..\src\random.h" />
     <ClInclude Include="..\src\rectangle.h" />
